update config file and default vars

--- a/templates/varnish.j2
+++ b/templates/varnish.j2
@@ -35,7 +35,7 @@ INSTANCE=$(uname -n)
 #
 # DAEMON_OPTS="-a :6081 \
 #              -T localhost:6082 \
-#            -b localhost:8080 \
+#            -b {{ varnish_admin_host }}:8080 \
 #            -u varnish -g varnish \
 #            -S /etc/varnish/secret \
 #            -s file,/var/lib/varnish/$INSTANCE/varnish_storage.bin,1G"
@@ -45,7 +45,7 @@ INSTANCE=$(uname -n)
 # one content server selected by the vcl file, based on the request.
 #
 DAEMON_OPTS="-a :{{ varnish_listen_port }} \
-             -T localhost:6082 \
+             -T {{ varnish_admin_host }}:{{ varnish_admin_port }} \
              -f /etc/varnish/default.vcl \
              -S /etc/varnish/secret \
              -s malloc,256m"
