loopin in the template

--- a/templates/magento.vcl.j2
+++ b/templates/magento.vcl.j2
@@ -20,7 +20,9 @@ backend default {
 }
 
 acl purge {
-    "{{ varnish_acl_ips }}";
+{% for ip in varnish_acl_ips %}
+    "{{ ip }}";
+{% endfor %}
 }
 
 sub vcl_recv {
