--- a/templates/customexec.conf.j2
+++ b/templates/customexec.conf.j2
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/sbin/varnishd -F -a :{{ varnish_listen_port }} -T {{ varnish_admin_host }}:{{ varnish_admin_port }} -f /etc/varnish/{{ varnish_vcl_file }} -S /etc/varnish/secret -s malloc,256m
+ExecStart=/usr/sbin/varnishd -F -a :{{ varnish_listen_port }} -T {{ varnish_admin_host }}:{{ varnish_admin_port }} -f /etc/varnish/{{ varnish_vcl_file }} -S /etc/varnish/secret -s malloc,256m {% if varnish_custom_config %}{% for config, value in varnish_custom_config.items() %}-p {{ config }}={{ value }} {% endfor %}{% endif %}
